--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First Git Repo</title>
+    <title>First Git Repogit add</title>
+    <link rel="stylesheet" href="/Style/style.css">
 </head>
 <body>
-    
+    <div>
+        <h3>git repo</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse minus vel deserunt magnam eveniet illum saepe doloremque totam aut! Sint ea voluptatum perspiciatis. Ducimus, nisi repellendus quia corporis non magni.</p>
+    </div>
 </body>
 </html>
